--- a/manifest.json
+++ b/manifest.json
@@ -1,19 +1,18 @@
 {
   "name": "Sueños Luminosos",
-  "short_name": "Luminosos",
-  "start_url": "/index.html",
+  "short_name": "Sueños",
+  "start_url": "./index.html",
   "display": "standalone",
-  "background_color": "#ffffff",
+  "background_color": "#222222",
   "theme_color": "#222222",
-  "orientation": "portrait",
   "icons": [
     {
-      "src": "/assets/icon-192.png",
+      "src": "assets/icon-192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/assets/icon-512.png",
+      "src": "assets/icon-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
