--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,7 @@
   "name": "Sueños Luminosos",
   "short_name": "Sueños",
   "start_url": "./index.html",
+  "scope": "./",
   "display": "standalone",
   "background_color": "#222222",
   "theme_color": "#222222",
