--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,13 @@
 {
   "name": "Sueños Luminosos",
-  "short_name": "Sueños",
-  "start_url": "./index.html",
+  "short_name": "Onio",
+  "start_url": "./",
   "scope": "./",
   "display": "standalone",
-  "background_color": "#222222",
+  "background_color": "#ffffff",
   "theme_color": "#222222",
   "icons": [
-    {
-      "src": "assets/icon-192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "assets/icon-512.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
+    { "src": "assets/icon-192.png", "sizes": "192x192", "type": "image/png" },
+    { "src": "assets/icon-512.png", "sizes": "512x512", "type": "image/png" }
   ]
 }
